--- a/page.html
+++ b/page.html
@@ -15,7 +15,7 @@
         }
        
        .emiray{
-            color:blue;
+            color: red;
             font-weight: bold;
             font-size: 40px;
         }  
